--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     },
     "require-dev": {
         "mockery/mockery": "~1.3",
-        "phpunit/phpunit": "~8.0",
+        "phpunit/phpunit": "^8.5.8|^9.3.3",
         "orchestra/testbench": "5.x"
     },
     "autoload": {
