--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "ext-json": "*",
         "illuminate/contracts": "^7|^8",
         "illuminate/filesystem": "^7|^8",
-        "illuminate/support": "^7|^8"
+        "illuminate/support": "^7|^8",
+        "illuminate/translation": "^7|^8"
     },
     "require-dev": {
         "mockery/mockery": "~1.3",
